--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.7.4",
     "next": "15.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "winedoojan": "file:"
+    "react-icons": "^5.5.0",
+    "winedoojan": "file:",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
