--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "15.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "winedoojan": "file:"
+    "winedoojan": "file:",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
