--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-toastify": "^11.0.5",
     "winedoojan": "file:",
     "zustand": "^5.0.3"
