--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.2",
+    "@hookform/resolvers": "^5.0.1",
     "browser-image-compression": "^2.0.2",
     "framer-motion": "^12.7.4",
     "next": "15.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.56.1",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-toastify": "^11.0.5",
     "winedoojan": "file:",
+    "zod": "^3.24.3",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
